# webchain

./: .editorconfig  .gitignore  README.md  SPEC.md  package-lock.json  pyproject.toml  requirements.txt
crawler/: crawl.json  deploy.sh  pyproject.toml
crawler/spider/: cached_session.py  cli.py  contracts.py  crawl.py  error.py  http.py  metadata.py  robots.py  serialize.py  state.py  tree.py
crawler/tests/: test_crawl.py  test_metadata.py  test_state.py
doc/: manual.md  spec.md
examples/: index.html
examples/a/: index.html
examples/a/1/: index.html
examples/a/2/: index.html
examples/b/: index.html
examples/b/1/: index.html
examples/b/2/: index.html
pages/: spec.md
scraper/: .gitignore  __main__.py  cli.py  crawl.py  deploy.sh  html.py  http.py  node.py  print.py  pyproject.toml  read.py  requirements-dev.txt  requirements.txt
scraper/scraper/: cli.py  contracts.py  crawl.py  hash.py  http.py  meris-wishlist.txt  metadata.py  node.py  read.py  serialize.py  state.py
scraper/tests/: test_crawl.py  test_html.py  test_metadata.py  test_read.py  test_state.py
web/: .gitignore  .prettierrc  README.md  deploy.sh  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web/src/: app.css  app.d.ts  app.html  hooks.server.ts  modules.d.ts
web/src/lib/: Header.svelte  SelectSort.svelte  Spinner.svelte  cache.ts  color.ts  compress.ts  crawler.ts  date.ts  fs.ts  image-cache.ts  node-state.ts  node.d.ts  node_state.ts  persistent.ts  semaphore.ts  snap.ts  url.ts  visited.ts
web/src/lib/favicon/: favicon-fetcher.ts  icon-discovery.ts  index.ts  storage.ts  types.ts
web/src/lib/graph/: graph-builder.ts  index.ts  tree-layout.ts
web/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  Graph.svelte  QnA.svelte  Sidebar.svelte  SidebarNode.svelte  binary-tree-data.json  example-data.json
web/src/routes/(pages)/: +layout.svelte
web/src/routes/(pages)/doc/: +page.server.ts  +page.svelte
web/src/routes/(pages)/doc/[slug]/: +page.server.ts  +page.svelte
web/src/routes/(pages)/gallery/: +page.svelte  Node.svelte
web/src/routes/api/favicon/: +server.ts
web/src/routes/api/snap/: +server.ts
web/src/routes/doc/[slug]/: +page.server.ts  +page.svelte
web/src/routes/feeds.opml/: +server.ts
web/src/routes/pages/[slug]/: +page.server.ts  +page.svelte
web/src/routes/robots.txt/: +server.ts
web/src/routes/rss.xml/: +server.ts
web/src/routes/sitemap.xml/: +server.ts
web/src/routes/spec/: +page.server.ts  +page.svelte
web/src/routes/subscriptions.xml/: +server.ts
web/static/crawler/: current.json  data.json  heartbeat.json  table.json
webchain_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
