[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "webchain-scraper"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
	"aiohttp[speedups]~=3.12",
	"beautifulsoup4",
	"lxml~=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[project.scripts]
print-tree = "scraper.cli:print_tree"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
