[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "webchain-spider"
dynamic = ["version"]
requires-python = ">=3.14"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
	"aiohttp[speedups]>=3.13.0",
	"beautifulsoup4>=4.14.2",
	"click>=8.3.0",
	"lxml>=6.0.2",
	"ordered-set>=4.1.0",
	"tenacity>=9.1.2",
	"zstandard>=0.25.0",
]

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-asyncio>=1.2.0", "ruff>=0.14.1"]

[project.scripts]
webchain = "spider.cli:webchain"

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
	".bzr",
	".direnv",
	".eggs",
	".git",
	".git-rewrite",
	".hg",
	".ipynb_checkpoints",
	".mypy_cache",
	".nox",
	".pants.d",
	".pyenv",
	".pytest_cache",
	".pytype",
	".ruff_cache",
	".svn",
	".tox",
	".venv",
	".vscode",
	"__pypackages__",
	"_build",
	"buck-out",
	"build",
	"dist",
	"node_modules",
	"site-packages",
	"venv",
]

line-length = 100
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
